<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.raphaelmaracaipe.uiauth.ui.validCode.ValidCodeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:title="@string/code_valid_title" />

            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/tvwMsgError"
                style="@style/TextError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@{viewModel.msgError}"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvwTitle"
                app:layout_constraintStart_toStartOf="@+id/tvwTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvwTitle"
                app:visible="@{!viewModel.msgError.empty}"
                tools:text="Error is show here"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvwTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="@string/code_valid_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:hint="@string/code_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(text)}"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="@+id/tvwTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvwTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvwMsgError" />

            <TextView
                android:id="@+id/tvwTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@{viewModel.countDownTimer}"
                app:layout_constraintBottom_toTopOf="@+id/pbrTime"
                app:layout_constraintEnd_toEndOf="@+id/pbrTime"
                app:layout_constraintStart_toStartOf="@+id/pbrTime"
                app:visible="@{(viewModel.countDownPercentage &lt; 100)}"
                tools:text="01:30" />

            <ProgressBar
                android:id="@+id/pbrTime"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="@{viewModel.countDownPercentage}"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="@+id/etNumber"
                app:layout_constraintStart_toStartOf="@+id/etNumber"
                app:layout_constraintTop_toBottomOf="@+id/etNumber"
                app:visible="@{(viewModel.countDownPercentage &lt; 100)}" />

            <TextView
                android:id="@+id/tvwSendAgain"
                style="@style/TextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:onClick="@{() -> viewModel.sendAgainToServer()}"
                android:text="@string/code_send_again"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:visible="@{(viewModel.countDownPercentage == 100)}" />

            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_button_loading"
                android:onClick="@{() -> viewModel.sendToServer()}"
                android:text="@string/btn_valid"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTintColorDark="@{@color/black}"
                app:backgroundTintColorLight="@{@color/colorPrimary}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvwTitle"
                app:layout_constraintStart_toStartOf="@+id/tvwTitle"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="10dp"
                app:spinning_bar_width="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/include_loading_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:isShow="@{viewModel.showLoading}"
            tools:visibility="gone" />
    </RelativeLayout>
</layout>