<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="br.com.raphaelmaracaipe.uiauth.AuthViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryVariant">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_icon"
                android:transitionName="icon_app_transition"
                app:layout_constraintBottom_toTopOf="@+id/lltAuth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvwTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvwWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvwTitle"
                app:layout_constraintStart_toStartOf="@+id/tvwTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvwTitle"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/lltAuth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_arround_box_auth"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCountry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:enabled="false"
                    android:hint="@string/country"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    app:endIconDrawable="@drawable/ic_chevron_right"
                    app:endIconMode="custom"
                    app:endIconTint="@color/gray"
                    app:hintTextColor="@color/gray"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="343dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="6"
                        android:text="@{viewModel.responseCodeCountry.countryName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCodePhone"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:enabled="@{viewModel.isEnableTextCode()}"
                        android:hint="@string/input_code_phone"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="343dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="6" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilNumPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:digits="0123456789"
                        android:hint="@string/input_num_phone"
                        tools:layout_editor_absoluteX="148dp"
                        tools:layout_editor_absoluteY="343dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietNumPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:maxLength="20" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/btn_login" />

                <TextView
                    android:id="@+id/tvwCopy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:text="@string/copy"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="148dp"
                    tools:layout_editor_absoluteY="682dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/include_loading_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:isShow="@{viewModel.showLoading}"
            tools:visibility="gone" />

    </RelativeLayout>
</layout>